# api

./: .gitignore  README.md  pyproject.toml  requirements.txt
trampoja/: manage.py
trampoja/avaliacoes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
trampoja/cancelados/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
trampoja/confirmados/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
trampoja/enderecos/: models.py  serializers.py  tests.py  urls.py  views.py
trampoja/estabelecimentos/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py  views_upload.py
trampoja/freelancers/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py  views_upload.py
trampoja/interesses/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
trampoja/mensagens/: apps.py  base_message.py  send_messages.py  tests.py
trampoja/ofertas/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
trampoja/planos/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
trampoja/planos_historico/: admin.py  models.py
trampoja/reportes/: admin.py  apps.py  manager.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
trampoja/trampoja/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+52 files in other folders)
